; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/oxygen/extr_xonar_pcm179x.c_xonar_st_h6_control_filter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/oxygen/extr_xonar_pcm179x.c_xonar_st_h6_control_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_kcontrol_new = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"Master Playback \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_kcontrol_new*)* @xonar_st_h6_control_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xonar_st_h6_control_filter(%struct.snd_kcontrol_new* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_kcontrol_new*, align 8
  store %struct.snd_kcontrol_new* %0, %struct.snd_kcontrol_new** %3, align 8
  %4 = load %struct.snd_kcontrol_new*, %struct.snd_kcontrol_new** %3, align 8
  %5 = getelementptr inbounds %struct.snd_kcontrol_new, %struct.snd_kcontrol_new* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @strncmp(i32 %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 16)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %9
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @strncmp(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
